clusters/k3s-home/apps/ai/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-http-route
  namespace: ai
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "ai.fletcherlabs.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 8080
          weight: 1
